<resources>
    <string name="app_name">Fake News - Detector</string>
    <string name="tv_action_bar_title">FAKE NEWS</string>
    <string name="tv_search_icon">Search</string>
    <string name="tv_judul">Judul</string>
    <string name="tv_deskripsi">Deskripsi</string>
    <string name="iv_gambar_berita">Gambar Berita</string>
    <string name="tv_kategori_berita">Kategori Berita:</string>
    <string name="tv_artikel">Artikel</string>
    <string name="ic_menu_utama">Menu Utama</string>
    <string name="ic_favorit">Favorit</string>
    <string name="ic_tentang_aplikasi">Tentang Aplikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_bagikan">Bagikan</string>
    <string name="iv_news_image">News Image</string>
    <string name="btn_memindai_berita">Memindai Berita</string>
</resources>